Issue #23: `single-product`: Adjusted paddings on mobile screens. `orders-table`: Show explanations for collapsed table view for columns order, tracking.

--- a/src/css/section-footer.css
+++ b/src/css/section-footer.css
@@ -21,8 +21,8 @@
   width: 100%;
   &:before,
   &:after {
-    content: " ";
+    content: ' ';
     display: table;
     clear: both;
   }
- }
+}
