--- a/src/css/single-product.css
+++ b/src/css/single-product.css
@@ -22,6 +22,9 @@
         flex: 1;
       }
     }
+    .body-holder {
+      padding: 0;
+    }
   }
   .merged-buttons {
     white-space: nowrap;
